# kyree-ai-portfolio

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  mlops_check.yml  policy.yml
docs/: overview.md
projects/01_ai_ml_engineer_mlopspipeline/: Makefile  Model_Card.md  README.md
projects/01_ai_ml_engineer_mlopspipeline/api/: app.py
projects/01_ai_ml_engineer_mlopspipeline/configs/: local.yaml
projects/01_ai_ml_engineer_mlopspipeline/models/: demo_dataset.csv  demo_dataset_v2.csv  evaluate.py  model.joblib  model.py
projects/01_ai_ml_engineer_mlopspipeline/src/: eval.py  pipeline.py  predict.py  train.py
projects/01_ai_ml_engineer_mlopspipeline/tests/: test_metrics.py  test_smoke.py
projects/02_genai_policy_assistant/: Dockerfile  Makefile  README.md  requirements.txt
projects/02_genai_policy_assistant/api/: app.py
projects/02_genai_policy_assistant/data/: policies.json
projects/02_genai_policy_assistant/scripts/: index_policies.py
projects/02_genai_policy_assistant/src/: app_streamlit.py  eval_qasets.py  ingest.py  retriever.py
projects/02_genai_policy_assistant/tests/: conftest.py  test_api.py  test_chains.py  test_policies.py
projects/03_discovery_statistics_druglike/data/: synthetic_assay.csv  synthetic_dose_response.csv
projects/03_financial_forecasting/: Makefile  README.md
projects/03_financial_forecasting/src/: dose_response.py  pipeline.py  report.py  stats_utils.py
projects/03_financial_forecasting/tests/: test_metrics.py
(+1 files in other folders)
